# opx-sdi-sys

./: .gitreview  Makefile.am  README.md  configure.ac
.github/: CODEOWNERS
cfg/sdi/: sdi-db-create.sql
debian/: changelog  control  copyright  libopx-sdi-device-drivers1.install  libopx-sdi-framework1.install  libopx-sdi-sys-dev.install  libopx-sdi-sys-vm1.install  libopx-sdi-sys-vm1.links  libopx-sdi-sys1.install  libopx-sdi-sys1.shlibs
inc/: Makefile.am
inc/opx/: sdi_comm_dev.h  sdi_comm_dev_internal.h  sdi_entity.h  sdi_entity_info.h  sdi_entity_info_internal.h  sdi_ext_ctrl.h  sdi_fan.h  sdi_host_system.h  sdi_host_system_internal.h  sdi_i2c_bus_api.h  sdi_io_port_api.h  sdi_led.h  sdi_media.h  sdi_media_internal.h  sdi_nvram.h  sdi_nvram_internal.h  sdi_pin.h  sdi_pin_group.h  sdi_pin_group_bus_api.h  sdi_power_monitor.h  sdi_smartfusion_io.h  sdi_sys_common.h  sdi_thermal.h
inc/opx/private/: sdi_bmc.h  sdi_bmc_bus_api.h  sdi_bmc_db.h  sdi_bmc_internal.h  sdi_bmc_io_bus.h  sdi_bus.h  sdi_bus_api.h  sdi_bus_attr.h  sdi_bus_framework.h  sdi_comm_dev_attr.h  sdi_comm_dev_internal.h  sdi_common_attr.h  sdi_cpld.h  sdi_cpld_attr.h  sdi_cpld_driver_attr.h  sdi_db.h  sdi_db_config.h  sdi_dell_eeprom.h  sdi_device_common.h  sdi_driver_internal.h  sdi_eeprom.h  sdi_emc142x_reg.h  sdi_emc2305.h  sdi_entity_info_internal.h  sdi_entity_info_resource_attr.h  sdi_entity_info_vdriver.h  sdi_entity_internal.h  sdi_ext_ctrl_internal.h  sdi_ext_ctrl_resource_attr.h  sdi_fan_internal.h  sdi_fan_resource_attr.h  sdi_fixed_ports.h  sdi_fpga_pci.h  sdi_fpga_pci_bus.h  sdi_fpga_pci_bus_api.h  sdi_fpga_pci_bus_attr.h  sdi_gpio.h  sdi_host_system_internal.h  sdi_i2c.h  sdi_i2c_bus_api.h  (+54 more)
inc/opx/private/eeprom/: genericideeprom.h
inc/opx/unittest/: sdi_unit_test.h
src/: Makefile  sdi_comm_dev.c  sdi_entity_framework.c  sdi_host_system.c  sdi_led.c  sdi_media.c  sdi_nvram.c
src/drivers/: sdi_bmc.c  sdi_bmc_dev.c  sdi_bmc_entity_info.c  sdi_bmc_fan.c  sdi_bmc_io_bus.c  sdi_bmc_oem_ext_ctl.c  sdi_bmc_tmp.c  sdi_comm_dev_driver.c  sdi_comm_dev_ext_ctrl.c  sdi_cpld.c  sdi_cpld_driver.c  sdi_cpld_pin.c  sdi_cpld_pin_group.c  sdi_dell_eeprom.c  sdi_eeprom.c  sdi_emc142x.c  sdi_emc2305.c  sdi_entity_info_vdriver.c  sdi_fixed_port.c  sdi_fpga_pci_bus.c  sdi_i2cmux_pca.c  sdi_i2cmux_pin.c  sdi_ina219.c  sdi_io_bus.c  sdi_max6620.c  sdi_max6699.c  sdi_media_ext_mod_ctrl.c  sdi_media_phy_mgmt.c  sdi_mono_color_pin_led.c  sdi_nvram.c  sdi_onie_eeprom.c  sdi_platform_util.c  sdi_pmbus_dev.c  sdi_pseudo_bus.c  sdi_qsfp.c  sdi_qsfp28_dd.c  sdi_qsfp28_dd_eeprom.c  sdi_qsfp_4X1_1000baseT.c  sdi_qsfp_eeprom.c  sdi_s6k_psu.c  (+11 more)
src/drivers/sys-interface-drivers/: sdi_gpio.c  sdi_i2cdev.c  sdi_sysfs_gpio_helpers.c
src/framework/: sdi_bmc_bus_api.c  sdi_bmc_db.cpp  sdi_bus_api.c  sdi_bus_framework.c  sdi_driver_framework.c  sdi_fpga_pci_bus_api.c  sdi_i2c_bus_api.c  sdi_io_port_api.c  sdi_pin_bus_api.c  sdi_pin_group_bus_api.c  sdi_resource_framework.c  sdi_smartfusion_io_bus_api.c
src/hwcore/: sdi_comm_dev.c  sdi_entity.c  sdi_entity_framework.c  sdi_entity_info.c  sdi_entity_reset.c  sdi_ext_ctrl.c  sdi_fan.c  sdi_host_system.c  sdi_led.c  sdi_media.c  sdi_nvram.c  sdi_power_monitor.c  sdi_startup.c  sdi_thermal.c
src/hwcore/unittest/: sdi_reference.cpp  sdi_target.cpp  sdi_unit_test.cpp
src/hwcore/unittest_utils/: pysdi.py  sdi_shell.py
src/unit_test/: run_test
src/unittest_utils/: pysdi.py
src/vmcore/: sdi_vm_comm_dev.c  sdi_vm_entity.c  sdi_vm_ext_ctrl.c  sdi_vm_fan.c  sdi_vm_host_system.c  sdi_vm_led.c  sdi_vm_media.c  sdi_vm_nvram.c  sdi_vm_power_monitor.c  sdi_vm_sys.c  sdi_vm_thermal.c
src/vmcore/unit_test/: run_test  sdi_vm_entity_info_unittest.cpp  sdi_vm_fan_unittest.cpp  sdi_vm_led_unittest.cpp  sdi_vm_media_unittest.cpp  sdi_vm_thermal_unittest.cpp
src/vmcore/unit_test/tests/: sdi_run_tests.sh
src/vmcore/unit_test/tests/data/: sdi-db-pas-test-init.sql  sdi-db-test-init.sql
src/vmdb/: sdi_db_ops.c
