noinst_HEADERS = \
	opx/sdi_register_eeprom_api.h \
	opx/unittest/sdi_unit_test.h \
	opx/util.h \
	opx/private/sdi_entity_internal.h \
	opx/sdi_register_fantray_api.h \
	opx/sdi_register_common_api.h

# Headers for API (will be included in -dev package)
nobase_include_HEADERS = \
        opx/sdi_comm_dev.h \
        opx/sdi_entity.h \
        opx/sdi_entity_info.h \
        opx/sdi_fan.h \
        opx/sdi_host_system.h \
        opx/sdi_led.h \
        opx/sdi_media.h \
        opx/sdi_nvram.h \
        opx/sdi_thermal.h
