#
# Copyright (c) 2018 Dell Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may obtain
# a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
#
# THIS CODE IS PROVIDED ON AN *AS IS* BASIS, WITHOUT WARRANTIES OR
# CONDITIONS OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT
# LIMITATION ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS
# FOR A PARTICULAR PURPOSE, MERCHANTABLITY OR NON-INFRINGEMENT.
#
# See the Apache Version 2.0 License for specific language governing
# permissions and limitations under the License.
#

noinst_HEADERS = \
        opx/private/sdi_bus_api.h \
        opx/private/sdi_bus_attr.h \
        opx/private/sdi_bus_framework.h \
        opx/private/sdi_bus.h \
        opx/private/sdi_comm_dev_attr.h \
        opx/private/sdi_comm_dev_internal.h \
        opx/private/sdi_common_attr.h \
        opx/private/sdi_cpld_attr.h \
        opx/private/sdi_cpld_driver_attr.h \
        opx/private/sdi_cpld.h \
        opx/private/sdi_db_config.h \
        opx/private/sdi_db.h \
        opx/private/sdi_dell_eeprom.h \
        opx/private/sdi_device_common.h \
        opx/private/sdi_driver_internal.h \
        opx/private/sdi_eeprom.h \
        opx/private/sdi_emc142x_reg.h \
        opx/private/sdi_emc2305.h \
        opx/private/sdi_entity_info_internal.h \
        opx/private/sdi_entity_info_resource_attr.h \
        opx/private/sdi_entity_info_vdriver.h \
        opx/private/sdi_entity_internal.h \
        opx/private/sdi_fan_internal.h \
        opx/private/sdi_fan_resource_attr.h \
        opx/private/sdi_gpio.h \
        opx/private/sdi_host_system_internal.h \
        opx/private/sdi_i2c_bus_api.h \
        opx/private/sdi_i2c_bus_framework.h \
        opx/private/sdi_i2cdev.h \
        opx/private/sdi_i2c.h \
        opx/private/sdi_i2c_mux_attr.h \
        opx/private/sdi_i2cmux_pca.h \
        opx/private/sdi_i2cmux_pin.h \
        opx/private/sdi_ina219_reg.h \
        opx/private/sdi_io_port_api.h \
        opx/private/sdi_led_internal.h \
        opx/private/sdi_max6620.h \
        opx/private/sdi_max6699_reg.h \
        opx/private/sdi_media_attr.h \
        opx/private/sdi_media_internal.h \
        opx/private/sdi_media_phy_mgmt.h \
        opx/private/sdi_nvram_internal.h \
        opx/private/sdi_nvram_resource_attr.h \
        opx/private/sdi_onie_eeprom.h \
        opx/private/sdi_pin_bus_api.h \
        opx/private/sdi_pin_bus_attr.h \
        opx/private/sdi_pin_bus_framework.h \
        opx/private/sdi_pin_group_bus_api.h \
        opx/private/sdi_pin_group_bus_framework.h \
        opx/private/sdi_pin_group.h \
        opx/private/sdi_pin.h \
        opx/private/sdi_pld_upgrade_internal.h \
        opx/private/sdi_pmbus_dev.h \
        opx/private/sdi_power_monitor_internal.h \
        opx/private/sdi_power_monitor_resource_attr.h \
        opx/private/sdi_qsfp.h \
        opx/private/sdi_qsfp_reg.h \
        opx/private/sdi_resource_internal.h \
        opx/private/sdi_sf_entity_info_attr.h \
        opx/private/sdi_sf_fan_attr.h \
        opx/private/sdi_sf_io_bus_attr.h \
        opx/private/sdi_sf_io_bus.h \
        opx/private/sdi_sfp.h \
        opx/private/sdi_sfp_reg.h \
        opx/private/sdi_sf_tmp_attr.h \
        opx/private/sdi_smartfusion_io_bus_api.h \
        opx/private/sdi_smartfusion_io.h \
        opx/private/sdi_sys_common.h \
        opx/private/sdi_sysfs_gpio_helpers.h \
        opx/private/sdi_sys_vm.h \
        opx/private/sdi_temperature_resource_attr.h \
        opx/private/sdi_thermal_internal.h \
        opx/private/sdi_tmp75_reg.h \
        opx/private/sdi_vm_sys_init.h \
        opx/private/sdi_register_common_api.h \
        opx/private/sdi_register_eeprom_api.h \
        opx/private/sdi_register_fantray_api.h \
        opx/private/util.h \
        opx/private/sdi_bmc.h \
        opx/private/sdi_bmc_bus_api.h \
        opx/private/sdi_bmc_db.h \
        opx/private/sdi_bmc_internal.h \
        opx/private/sdi_bmc_io_bus.h \
        opx/private/sdi_fpga_pci.h \
        opx/private/sdi_fpga_pci_bus.h \
        opx/private/sdi_fpga_pci_bus_api.h \
        opx/private/sdi_fpga_pci_bus_attr.h \
        opx/private/sdi_fixed_ports.h \
        opx/private/sdi_qsfp28_dd.h \
        opx/unittest/sdi_unit_test.h

# Headers for API (will be included in -dev package)
nobase_include_HEADERS = \
        opx/sdi_comm_dev.h \
        opx/sdi_entity.h \
        opx/sdi_entity_info.h \
        opx/sdi_ext_ctrl.h \
        opx/sdi_fan.h \
        opx/sdi_host_system.h \
        opx/sdi_led.h \
        opx/sdi_media.h \
        opx/sdi_nvram.h \
        opx/sdi_thermal.h \
        opx/sdi_power_monitor.h

